--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
       "url": "https://github.com/ModuleLoader/es6-module-loader/blob/master/LICENSE-MIT"
     }
   ],
-  "dependencies": {},
+  "dependencies": {
+    "esprima": "~1.0.3"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
@@ -40,5 +42,7 @@
   "scripts": {
     "test": "grunt test"
   },
-  "files": ["lib/es6-module-loader.js"]
+  "files": [
+    "lib/es6-module-loader.js"
+  ]
 }
